Adding Projects and Descriptions
- Adding Unstable Star Project and Description
- Adding Future Scape Project and Description

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<section id="one" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>About Me</h2>
-							<p>Hello, I'm a junior Computer Science undergraduate studying at Arizona State University. My dream is to one day change the industry by not only enticing the players
+							<p>Hello, I'm a senior in Computer Science undergraduate studying at Arizona State University. My dream is to one day change the industry by not only enticing the players
 								who play games but inspire developers to make great games. Game developement has been a lifelong passion of mine and am very commited to the projects I create.
 								<br>Resume: <a href="https://drive.google.com/file/d/1j0v5-diA34gnmKcMResmDFz70OmLqGGf/view?usp=sharing">resume link</a></br></p>
 							<div class="features">
@@ -92,8 +92,10 @@
 							<div class="content">
 								<div class="content">
 									<div class="inner">
-										<h2>Unstable Star (2024)</h2>
-										<p> A project made for the Video Game Design Club during their 2023-24 session.
+										<h2>Rogue Nebula (2023)</h2>
+										<p> A project made for the Video Game Design Club during their summer session. The game was meant to be a prototype for Unstable Star.
+											Endlessly plow through waves of enemies in the pursuite of a high score. The game is heavily inspired by classic arcade games like 
+											Galaga, Defender 1981, and Space Invaders. It features a scrolling 3D environment, a reactive user interface, vibrant special effects, and an assortment of enemy behaviors.
 										</p>
 										<ul class="actions">
 											<li><a href="rogue_nebula.html" class="button">More Details</a></li>
@@ -102,17 +104,37 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/nebula_title.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/future_scape_title.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="content">
 									<div class="inner">
-										<h2>Rogue Nebula (2023)</h2>
-										<p> A project made for the Video Game Design Club during their summer session. Endlessly plow through waves of enemies in the pursuit 
-											of a high score. The game is heavily inspired by classic arcade games like Galaga, Defender 1981, and Space Invaders. 
-											It features a scrolling 3D environment, a reactive user interface, vibrant special effects, and an assortment of enemy behaviors.
+										<h2>Future Scape (2024)</h2>
+										<p> A project I was tasked to develop for Enterprise Technologies. This project was to be a virtual career explorer targeted
+											to students in primary and middle school. Featuring multiple minigames that explored different careers like a pharmicology, 
+											manufacturing, forensic science, etc. I developed the pharmacy, manufacturing, and urban planning minigames.
+											As a pharmacist give your customers the medication they need in a certain amount of time. In manufacturing build assebly lines and 
+											combine components to make products that you can sell. In urban planning build your own city while managing a budget and resources at
+											your disposal.
 										</p>
 										<ul class="actions">
-											<li><a href="rogue_nebula.html" class="button">More Details</a></li>
+											<li><a href="future_scape.html" class="button">More Details</a></li>
+										</ul>
+									</div>
+							</div>
+						</section>
+						<section>
+							<a href="#" class="image"><img src="images/unstable_star_title.jpg" alt="" data-position="top center" /></a>
+							<div class="content">
+								<div class="content">
+									<div class="inner">
+										<h2>Unstable Star (2024)</h2>
+										<p> A project made for the Video Game Design Club during their 2023-24 session. Enjoy and immerse yourself in a comedic and
+											heartwarming story about a lowly guard taking on an empire. Travel through three variable levels including dynamic objectives
+											and challenging boss fights. This game features an animated dialogue system, weapon and ability inventory and selection system,
+											a reactive user interface, vibrant sounds and vfx, and an assortment of enemy behaviors.
+										</p>
+										<ul class="actions">
+											<li><a href="unstable_star.html" class="button">More Details</a></li>
 										</ul>
 									</div>
 							</div>
