--- a/other_pj.html
+++ b/other_pj.html
@@ -21,6 +21,8 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="rogue_nebula.html">Rogue Nebula</a></li>
+						<li><a href="future_scape.html">Future Scape</a></li>
+						<li><a href="unstable_star.html">Unstable Star</a></li>
 						<li><a href="hells_kitchen.html">The Devil's Diner</a></li>
 						<li><a href="bloodlust.html">Bloodlust</a></li>
 						<li><a href="star_raid.html">Star Raid</a></li>
