Changes to the main page

--- a/index.html
+++ b/index.html
@@ -46,40 +46,41 @@
 					<section id="one" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>About Me</h2>
-							<p>Hello, I'm a senior in Computer Science undergraduate studying at Arizona State University. My dream is to one day change the industry by not only enticing the players
-								who play games but inspire developers to make great games. Game developement has been a lifelong passion of mine and am very commited to the projects I create.
-								<br>Resume: <a href="https://drive.google.com/file/d/1j0v5-diA34gnmKcMResmDFz70OmLqGGf/view?usp=sharing">resume link</a></br></p>
+							<p>Hello, I'm a senior Computer Science undergraduate studying at Arizona State University. Game developement has been a lifelong passion of mine and am very commited to the projects I create.
+								My dream is to one day change the industry by not only enticing the players who play games but inspire developers to make great games.</p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
 									<h3>Programming</h3>
 									<ul>
-										<li>Proficiant Languages: C#, C++, C, Java.</li>
-										<li>Other languages that I've learned:<br>HTML, Scheme, Prolog, Python.</li>
+										<li>Proficiant Languages: C#, C++, C, HTML, CSS, Javascript.</li>
+										<li>Other languages that I've learned:<br>SQL, Kotlin, Java, Python.</li>
 								</section>
 								<section>
 									<span class="icon solid major fa-gamepad"></span>
 									<h3>Game Development</h3>
 									<ul>
-										<li>Over 6 years of experience with the Unity Creation Engine.</li>
-										<li>President of The Game Design Club at ASU.</li>
-										<li>Participated in multiple game jams (More info Below).</li>
+										<li>6+ years of experience with the <a href="https://unity.com/">Unity Creation Engine</a>.</li>
+										<li>President of The <a href="https://asu.campuslabs.com/engage/organization/vgdc">Video Game Design Club at ASU</a>.</li>
+										<li>Participated in multiple game jams including <a href="https://ldjam.com/">Ludum Dare</a> (More info Below).</li>
 								</section>
 								<section>
 									<span class="icon solid major fa-graduation-cap"></span>
-									<h3>School</h3>
+									<h3>Education</h3>
 									<ul>
-										<li> Persuing BS in Computer Science at <a href="https://www.asu.edu/">Arizona State University</a>, Tempe, AZ.</li>
-										<li> Studied for four years at <a href="https://prod.orangecoastcollege.edu/">Orange Coast Collage</a>, Costa Mesa.</li>
-										<li> Studied for two years at <a href="https://www.msjc.edu/">Mt. San Jacento Collage</a>, Menifee CA.</li></ul>
+										<li><a href="https://www.asu.edu/">Arizona State University</a> 2022 - Present
+											(Bachlor's Degree)</li>
+										<li><a href="https://prod.orangecoastcollege.edu/">Orange Coast Collage</a> 2019 - 2022
+										(Associate Degree)</li>
+										<li><a href="https://www.msjc.edu/">Mt. San Jacento Collage</a> 2017 - 2018</li></ul>
 								</section>
 								<section>
 									<span class="icon solid major fa-paint-brush"></span>
 									<h3>Animation & Art</h3>
 									<ul>
-										<li>Experience in <a href="https://www.blender.org/">Blender</a>, an app used to create 3D game assets.</li>
+										<li>Experience in <a href="https://www.blender.org/">Blender</a> an app used to create 3D game assets.</li>
 										<li>Experience in <a href="https://www.aseprite.org/">Aseprite</a>, an app used to make 2D pixel art.</li>
-										<li>Experience in <a href="https://www.adobe.com/">Adobe</a> apps like Illistrator and Photoshop.</li>
+										<li>Experience in <a href="https://www.adobe.com/">Adobe</a> apps like Photoshop, Illistrator, and Lightroom.</li>
 								</section>
 							</div>
 						</div>
