--- a/fishy_business.html
+++ b/fishy_business.html
@@ -44,8 +44,9 @@
 							<span class="image fit"><img src="images/space_gameplay_2.gif" alt="" /></span>
 							<h2>Summary</h2>
 							<p>Fishy Business was a group project created for a game developement class using the <a href="https://gamemaker.io/en">Gamemaker</a> engine. The main focus of the project was to simulate an environment and 
-								process similar to working with a professional studio. We had deadlines, checkups, peer evaluations, design documentation, and presentations. I was the group leader and the main
-								gameplay programer. A snapshot of this project can be found on our <a href="https://fishy-devs.itch.io/fishy-business">itch.io</a> page.</p>
+								process similar to working in a professional studio. We had deadlines, conducted regular check-ins, peer evaluations, created design documentation, and marketing. As the group leader and gameplay 
+								programmer, I played a pivotal role in bringing this project to life. A snapshot of this project can be found on ou A snapshot of this project can be found on our 
+								<a href="https://fishy-devs.itch.io/fishy-business">itch.io</a> page.</p>
 							</p>
 							<span class="image fit"><img src="images/space_gameplay.gif" alt="" /></span>
 							<h2>Gameplay</h2>
