--- a/rogue_nebula.html
+++ b/rogue_nebula.html
@@ -49,7 +49,7 @@
 							</p>
 							<span class="image fit"><img src="images/bl_gameplay.gif" alt="" /></span>
 							<h2>Gameplay</h2>
-							<p>The player first must choose a name to go by in order to get a leaderboard entry, if they do not choose a name they are "anonymous". The player is then imediatly
+							<p>The player first must choose a name to go by in order to get a leaderboard entry, if they do not choose a name they are "anonymous". The player is then immediatly
 								thrusted into the first wave of enemies, in order to survive the player must dodge their flurry of bullets and fire back. The player is not completely helpless through
 								as they have abilities and a secondary weapon to help them. Every eight waves the game starts upping the difficulty, after wave sixteen you are on the hardest difficulty
 								and from there on you must try to survive an endless horde. This game is not easy but a verteran bullet hell player might get high into the score system.
