--- a/unstable_star.html
+++ b/unstable_star.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Ryan Carpenter's Portfolio - Future Scape</title>
+		<title>Ryan Carpenter's Portfolio - Unstable Star</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -39,14 +39,14 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">Rogue Nebula</h1>
+							<h1 class="major">Unstable Star</h1>
 							<!-- <span class="image fit"><img src="images/pic16.jpg" alt="" /></span> -->
 							<span class="image fit"><img src="images/bl_start.gif" alt="" /></span>
 							<h2>Summary</h2>
-							<p> Unstable Star was a game made in collaboration with the Video Game Design Club at Arizona State University. This game features three
+							<p> Unstable Star was a game made in collaboration with the Video Game Developement Club at Arizona State University. This game features three
 								unique levels and two challenging boss fights. Embark on a lighthearted and action-packed journey of redemption. A former Border Guard 
 								for the Intragalactic Coalition, he quickly becomes embroiled in an unexpected Rebellion to save the galaxy. I was the vice president and
-								the systems lead for the project. I overseed project management including, organizing and schedualing tasks for my team and mapping the
+								systems lead for the project. I overseed project management including, organizing and schedualing tasks for my team and mapping the
 								project timeline.
 							</p>
 							<span class="image fit"><img src="images/bl_gameplay.gif" alt="" /></span>
