--- a/index.html
+++ b/index.html
@@ -31,22 +31,24 @@
 		<!-- Wrapper -->
 			<div id="wrapper">
 
-				<!-- Welcome -->
+
+				<!-- =============================================== Welcome =============================================== -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Ryan Carpenter's Portfolio</h1>
-							<p>A collection of Ryan Carpenter's development and experience with the <a href="#https://unity.com/">Unity Engine</a> and other mediums.</p>
+							<p>A collection of Ryan Carpenter's experience with development in the <a href="https://unity.com/">Unity Engine</a> and other mediums.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">About Me</a></li>
 							</ul>
 						</div>
 					</section>
 
-				<!-- About Me -->
+
+				<!-- =============================================== About Me =============================================== -->
 					<section id="one" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>About Me</h2>
-							<p>Hello, I'm a senior Computer Science undergraduate studying at Arizona State University. Game developement has been a lifelong passion of mine and am very commited to the projects I create.
+							<h2>ABOUT ME</h2>
+							<p>Hello, I'm a senior Computer Science undergraduate studying at <a href="https://www.asu.edu/">Arizona State University</a>. Game developement has been a lifelong passion of mine and am very commited to the projects I create.
 								My dream is to one day change the industry by not only enticing the players who play games but inspire developers to make great games.</p>
 							<div class="features">
 								<section>
@@ -61,7 +63,7 @@
 									<h3>Game Development</h3>
 									<ul>
 										<li>6+ years of experience with the <a href="https://unity.com/">Unity Creation Engine</a>.</li>
-										<li>President of The <a href="https://asu.campuslabs.com/engage/organization/vgdc">Video Game Design Club at ASU</a>.</li>
+										<li>President of The <a href="https://asu.campuslabs.com/engage/organization/vgdc">Video Game Developement Club at ASU</a>.</li>
 										<li>Participated in multiple game jams including <a href="https://ldjam.com/">Ludum Dare</a> (More info Below).</li>
 								</section>
 								<section>
@@ -86,18 +88,25 @@
 						</div>
 					</section>
 
-					<!-- Projects -->
+
+					<!-- =============================================== Projects =============================================== -->
 					<section id="two" class="wrapper style2 spotlights">
+						<div class="inner">
+						<h2>PROJECTS</h2>
+						</div>
 						<section>
 							<a href="#" class="image"><img src="images/nebula_title.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="content">
 									<div class="inner">
 										<h2>Rogue Nebula (2023)</h2>
-										<p> A project made for the Video Game Design Club during their summer session. The game was meant to be a prototype for Unstable Star.
-											Endlessly plow through waves of enemies in the pursuite of a high score. The game is heavily inspired by classic arcade games like 
-											Galaga, Defender 1981, and Space Invaders. It features a scrolling 3D environment, a reactive user interface, vibrant special effects, and an assortment of enemy behaviors.
+										<p> 
+											Developed for the <a href="https://asu.campuslabs.com/engage/organization/vgdc">Video Game Development Club</a>'s summer session, 
+											this prototype for a future project <em>Unstable Star</em> challenges players to survive endless waves of enemies in pursuit of a 
+											high score. Inspired by classic arcade titles like <em>Galaga, Defender (1981)</em>, and <em>Space Invaders,</em> the game features 
+											a scrolling 3D environment, reactive UI, vibrant effects, and varied enemy behaviors.
 										</p>
+										<!-- Make progress bars for coding languages used here -->
 										<ul class="actions">
 											<li><a href="rogue_nebula.html" class="button">More Details</a></li>
 										</ul>
@@ -110,13 +119,14 @@
 								<div class="content">
 									<div class="inner">
 										<h2>Future Scape (2024)</h2>
-										<p> A project I was tasked to develop for Enterprise Technologies. This project was to be a virtual career explorer targeted
-											to students in primary and middle school. Featuring multiple minigames that explored different careers like a pharmicology, 
-											manufacturing, forensic science, etc. I developed the pharmacy, manufacturing, and urban planning minigames.
-											As a pharmacist give your customers the medication they need in a certain amount of time. In manufacturing build assebly lines and 
-											combine components to make products that you can sell. In urban planning build your own city while managing a budget and resources at
-											your disposal.
+										<p> 
+											Developed for <a href="https://tech.asu.edu/">Enterprise Technologies</a> this virtual career explorer targets primary and 
+											middle school students. It features a variety of minigames exploring careers like pharmacology, manufacturing, forensic science and more. 
+											I solely created the pharmacy, manufacturing, and urban planning minigames. As a pharmacist, players dispense medications within a 
+											time limit. In manufacturing, players design assembly lines and combine components to create products for sale.
+											In urban planning, players build your own city while managing a budget and resources at your disposal.
 										</p>
+										<!-- Make progress bars for coding languages used here -->
 										<ul class="actions">
 											<li><a href="future_scape.html" class="button">More Details</a></li>
 										</ul>
@@ -129,11 +139,13 @@
 								<div class="content">
 									<div class="inner">
 										<h2>Unstable Star (2024)</h2>
-										<p> A project made for the Video Game Design Club during their 2023-24 session. Enjoy and immerse yourself in a comedic and
-											heartwarming story about a lowly guard taking on an empire. Travel through three variable levels including dynamic objectives
-											and challenging boss fights. This game features an animated dialogue system, weapon and ability inventory and selection system,
-											a reactive user interface, vibrant sounds and vfx, and an assortment of enemy behaviors.
+										<p> 
+											A Developed for the <a href="https://asu.campuslabs.com/engage/organization/vgdc">Video Game Development Club</a>'s 2023-24 session, a successor to <em>Rogue Nebula</em>, this game tells a comedic and 
+											heartwarming story of a lowly guard challenging a galactic empire. Travel through three variable levels including dynamic objectives
+											and challenging boss fights. Players journey through three diverse levels with dynamic objectives and challenging boss fights. The game 
+											features a full animated dialogue system, weapon and ability inventory, a responsive UI, vibrant sounds and VFX, and varied enemy behaviors.
 										</p>
+										<!-- Make progress bars for coding languages used here -->
 										<ul class="actions">
 											<li><a href="unstable_star.html" class="button">More Details</a></li>
 										</ul>
@@ -145,11 +157,13 @@
 							<div class="content">
 								<div class="inner">
 									<h2>The Devil's Diner (2023)</h2>
-									<p>A project made with a small team for the Ludum Dare Game Jam #50, which is a challenge where competitors have 72 hours to create a game completely 
-										from scratch. Our game stars a doomed chef who must cook for demons in Hell's most treacherous kitchen. This game features a crafting system,
-										 interactable UI, a leaderboard system, cutscenes, and a level system. It was a blast working with each other on this project, so much so that 
-										 we decided to port the game to mobile, which is currently in progress. All assets and artwork are my own.
+									<p>
+										Created with a small team for <a href="https://ldjam.com/events/ludum-dare/50">Ludum Dare Game Jam #50</a>, this game stars a simple chef doomed to cook
+										the devil's for demons in Hell's most treacherous kitchen. Developed in 72 hours, the game features a crafting system, interactive UI, leaderboard, cutscenes, 
+										and a level system. This project was so enjoyable to work on we decided to attempt to porting the game to mobile for a short time. 
+										All assets and artwork are my own.
 									</p>
+									<!-- Make progress bars for coding languages used here -->
 									<ul class="actions">
 										<li><a href="hells_kitchen.html" class="button">More Details</a></li>
 									</ul>
@@ -162,10 +176,11 @@
 								<div class="content">
 									<div class="inner">
 										<h2>Bloodlust (2021)</h2>
-										<p> A project made with a friend for the Ludum Dare Game Jam #49.
-											This game features sophisticated AI, pathfinding using A*, a dynamic NPC scheduling system, a day and night cycle,
-											and an inventory system. All assets and artwork are my own.
+										<p> 
+											Developed with a colleague for <a href="https://ldjam.com/events/ludum-dare/49">Ludum Dare Game Jam #49</a>, this game features sophisticated AI, 
+											A* pathfinding, a dynamic NPC scheduling system, a day and night cycle, and an inventory system. All assets and artwork are my own.
 										</p>
+										<!-- Make progress bars for coding languages used here -->
 										<ul class="actions">
 											<li><a href="bloodlust.html" class="button">More Details</a></li>
 										</ul>
@@ -178,11 +193,12 @@
 								<div class="content">
 									<div class="inner">
 										<h2>Star Raid (2021)</h2>
-										<p>Star Raid was a very ambitious project that I was developing with one of my colleagues. Unfortunately, development for the game ceased due 
-											to the increasingly large scope of the project and our desire to move forward with more interesting projects overweighed our decision. This game was centered 
-											around co-op gameplay and featured P2P client-based multiplayer, a crafting system, A* pathfinding for enemies, raycasting projectiles, 
-											and a user-based command system. All assets and artwork are my own.
+										<p>
+											A once very ambitious project developed with a colleague. However, development halted as the project’s growing scope outweighed our 
+											plans to continue developement. The game focused on co-op gameplay and featured P2P client-based multiplayer, a crafting system, A* pathfinding for 
+											enemies, raycasting projectiles, and a user-based command system. All assets and artwork are my own.
 										</p>
+										<!-- Make progress bars for coding languages used here -->
 										<ul class="actions">
 											<li><a href="star_raid.html" class="button">More Details</a></li>
 										</ul>
@@ -194,9 +210,12 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Fishy Business (2023)</h2>
-									<p>Fishy Business was a group project created for a game developement class using the <a href="https://gamemaker.io/en">Gamemaker</a> engine. The main focus of the project was to simulate an environment and 
-										process similar to working with a professional studio. We had deadlines, checkups, peer evaluations, design documentation, and presentations. I was the group leader and the main
-										gameplay programer. A snapshot of this project can be found on our <a href="https://fishy-devs.itch.io/fishy-business">itch.io</a> page.</p>
+									<p>
+										A group project for a game development class using the <a href="https://gamemaker.io/en">GameMaker</a> engine. The goal was to simulate a professional 
+										studio environment, complete with deadlines, checkups, peer evaluations, design documentation, and presentations. I served as the group leader and gameplay 
+										programmer.
+									</p>
+									<!-- Make progress bars for coding languages used here -->
 									<ul class="actions">
 										<li><a href="fishy_business.html" class="button">More Details</a></li>
 									</ul>
@@ -207,11 +226,10 @@
 							<a href="#" class="image"><img src="images/spirit_title.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Spirit of Calamity (2020)</h2>
-									<p>Spirit of Calamity is a personal project of mine that I have been working on for many years. It's my passion project, and although I feel very 
-										motivated to create it, little has been done on this project. I'm seeking more experience before I tackle the challenge of making this dream project 
-										come true. While I'm not willing to share the source code, I can provide a detailed description of the features I have implemented on the "More Details" page. 
-										All assets and artwork are my own.
+									<h2>Spirit of Calamity (2022)</h2>
+									<p>
+										A personal passion project I've been working on for years. Although I'm deeply motivated to create it, progress has been slow as I seek more experience and collaboration before 
+										tackling this large project. While I’m not ready to share the source code, a detailed description of the implemented features is available on the 'More Details' page.
 									</p>
 									<ul class="actions">
 										<li><a href="soc.html" class="button">More Details</a></li>
@@ -224,7 +242,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Smaller Projects</h2>
-									<p>A collection of smaller projects that are from tutorials and online courses. Most artwork is mine but some downloaded from free game asset sources.</p>
+									<p>A collection of smaller projects from tutorials and online courses. Most artwork is my own, with some assets sourced from free game asset libraries.</p>
 									<ul class="actions">
 										<li><a href="other_pj.html" class="button">More Details</a></li>
 									</ul>
@@ -233,25 +251,25 @@
 						</section>
 					</section>
 
-				<!-- Contact -->
+				<!-- =============================================== Contact =============================================== -->
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
-							<h2>Contact</h2>
+							<h2>CONTACT</h2>
 									<ul class="contact">
-										<li>
-											<h3>Personal Email</h3>
-											<p>ryan.carpenter1184@gmail.com</p>
-										</li>
 										<li>
 											<h3>Developer Email</h3>
 											<p>dev.ryan1184@gmail.com
+										</li>
+										<li>
+											<h3>Personal Email</h3>
+											<p>ryan.carpenter1184@gmail.com</p>
 										</li>
 										<li>
 											<h3>School Email</h3>
 											<p>rjcarpe2@asu.edu
 										</li>
 										<li>
-											<h3>Social</h3>
+											<h3>Socials</h3>
 											<ul class="icons">
 												<li><a href="https://www.linkedin.com/in/ryan-carpenter-4bba08182/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 												<li><a href="https://github.com/dev-rygy" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
