--- a/future_scape.html
+++ b/future_scape.html
@@ -39,27 +39,28 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
+							<!-- Project Title -->
 							<h1 class="major">Future Scape</h1>
-							<!-- <span class="image fit"><img src="images/pic16.jpg" alt="" /></span> -->
+							<!-- Project Summary -->
 							<span class="image fit"><img src="images/bl_start.gif" alt="" /></span>
 							<h2>Summary</h2>
-							<p> <!-- TODO: Summary explaination -->
-								Future Scape is a project I was tasked to develop for Enterprise Technologies. This project was to be a virtual career explorer targeted
-								to students in primary and middle school. Featuring multiple minigames that explored different careers like a pharmicology, 
-								manufacturing, forensic science, etc. I developed the pharmacy, manufacturing, and urban planning minigames.
-								As a pharmacist give your customers the medication they need in a certain amount of time. In manufacturing build assebly lines and 
-								combine components to make products that you can sell. In urban planning build your own city while managing a budget and resources at
-								your disposal.
+							<p>
+								Developed for Enterprise Technologies, Future Scape is a virtual career exploration tool designed for primary and middle school students.
+								The project features interactive minigames, each showcasing different careers such as pharmacology, manufacturing, forensic science, etc. 
+								I specifically designed and developed the pharmacy, manufacturing, and urban planning minigames. 
+								In the pharmacy minigame, players act as pharmacists, dispensing medications to patients within a time limit. The manufacturing minigame challenges 
+								players to build assembly lines and create products while manating a budget. The urban planning minigame involves designing a city and
+								managing resources and budgeting effectively.
 							</p>
+							<!-- Gameplay Description -->
 							<span class="image fit"><img src="images/bl_gameplay.gif" alt="" /></span>
 							<h2>Gameplay</h2>
-							<p>	<!-- TODO: Gameplay explaination -->
-								Gameplay varies based on the minigame experience the player enters. The player may walk through a portal to enter any experience from
-								the main hub. Each minigame has unique gameplay from solving a forensic crime to giving patients the medication they need in a pharmacy.
-								The games that I managed and built were the manufacturing, urban planning, and parmacist minigames. Manufacturing and urban planning carry
-								alot of the same systems. A sandbox-like building system allows the player to place and remove objects that don't overlap with other objects using
-								a grid system. An economy system that requires funds in order to be able to select and place objects.
+							<p>	
+								The gameplay varies across minigames, all accessible via portals from a main hub. Each game introduces unique challenges, from solving forensic puzzles 
+								to managing complex economic systems and building cities. The games that I created employ a sandbox-like environment where players can 
+								place and remove objects on a grid system without overlap, facilitated by an economy and resource system for object selection and placement.
 							</p>
+							<!-- Feature List -->
 							<h2>Implemented Features</h2>
 							<div class="table-wrapper">
 								<table>
@@ -71,49 +72,56 @@
 									</thead>
 									<tbody>
 										<tr>
-											<td>XR Developement Kit</td>
-											<td> Utalizes Unity's XR Developement Kit to build VR systems for the games. These systems include locomotion, grabbing,
-												ray casting, and other interactions with a VR headset.
+											<td>XR Development Kit</td>
+											<td> 
+												Leverages Unity’s XR Development Kit to create immersive VR experiences, featuring locomotion, grabbing, 
+												raycasting, and other interactive elements suitable for a VR headset.
 											</td>
 											<td></td>
 										</tr>
 										<tr>
 											<td>Sandbox Building</td>
-											<td> Both manufacturing and urban planning utalizes grid snapping and grid space memory in a 2D array to create a sandbox
-												where the player can place objects that do not overlap or conflict with the meshes of other objects. A transparent green selector
-												material is offered to each selected object to forshadow where you can place it on the grid. A remove mode is offered to the player
-												to remove objects via the same button to place.
+											<td> 
+												Utilized in both manufacturing and urban planning, this feature includes grid snapping and spatial memory for object placement.
+												The player may place and remove objects in a way that does not conflict with the placement of others. The player may rotate and
+												select a variety of objects with the help of transparent green silhouette in the shape of the selected mesh.
 											</td>
 											<td></td>
 										</tr>
 										<tr>
 											<td>Component Linking</td>
-											<td> In manufacturing components can be linked via conveyer belts. Components are input/output machines that can take in multiple
-												inputs and produce an output.
+											<td> 
+												In manufacturing, components are machines that can be linked via conveyor belts to create assembly lines. 
+												A complex system handles items that interact with with these components, input item(s) are detected and accepted if a 
+												possible output item can be created.
 											</td>
 										</tr>
 										<tr>
 											<td>Economy Systems</td>
-											<td> In urban planning and manufacturing you must manage a budget in order to buy different objects before you can place them down.
-												Income is provided in passive forms as well as active which includes shipping products and taxing buildings.
+											<td> 
+												Both in urban planning and manufacturing, the player must manage a budget in order to purchase and place objects in the
+												world. Income can also be provided through passive means to help the player build quickly and prevent soft locking.
 											</td>
 										</tr>
 										<tr>
 											<td>Resource Management Systems</td>
-											<td> In urban planning manage resources to make sure your city is functional and earning you income. 
-												Each building has required and provided resources. Required resources must be satisfied before they can provide their own resources. 
-												The player must balance the ratio of thier total resources and required resources in order to make their city fully functional.
+											<td> 
+												In urban planning, managing resources is critical to making sure your city is stable and functional. 
+												Each building has required and provided resources. Required resources must be met before a building can be taxed. 
+												Players strategize to balance required and available resources to optimize city operations.
 											</td>
 										</tr>
 										<tr>
 											<td>Particle Systems and Shaders</td>
-											<td> Particles include ambiant dust in manufacturing, and fireflies in astronomy. Shaders include the portals
+											<td> 
+												Particles include ambient dust in manufacturing, and fireflies in astronomy. Shaders include the portals
 												in the main hub room and the relay pad in urban planning. All shaders were made using Unity's shader graph.
 											</td>
 										</tr>
 									</tbody>
 								</table>
 							<br>
+							<!-- Links -->
 							<ul class="icons">
 								<li>Link to Game - <a href="https://heatwave-studios.itch.io/rogue-nebula">https://heatwave-studios.itch.io/rogue-nebula</span></a></li>
 								<li>Repository Link - <a href="https://github.com/GDCASU/SummerSession2023" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
@@ -127,7 +135,7 @@
 			<footer id="footer" class="wrapper alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>Website Template By: <a href="http://html5up.net">HTML5 UP</a></li>
+						<!-- <li>Website Template By: <a href="http://html5up.net">HTML5 UP</a></li> -->
 					</ul>
 				</div>
 			</footer>
