--- a/index.html
+++ b/index.html
@@ -51,21 +51,26 @@
 							<p>Hello, I'm a senior Computer Science undergraduate studying at <a href="https://www.asu.edu/">Arizona State University</a>. Game developement has been a lifelong passion of mine and am very commited to the projects I create.
 								My dream is to one day change the industry by not only enticing the players who play games but inspire developers to make great games.</p>
 							<div class="features">
+
 								<section>
 									<span class="icon solid major fa-code"></span>
 									<h3>Programming</h3>
 									<ul>
 										<li>Proficiant Languages: C#, C++, C, HTML, CSS, Javascript.</li>
 										<li>Other languages that I've learned:<br>SQL, Kotlin, Java, Python.</li>
+									</ul>
 								</section>
+
 								<section>
 									<span class="icon solid major fa-gamepad"></span>
 									<h3>Game Development</h3>
 									<ul>
-										<li>6+ years of experience with the <a href="https://unity.com/">Unity Creation Engine</a>.</li>
 										<li>President of The <a href="https://asu.campuslabs.com/engage/organization/vgdc">Video Game Developement Club at ASU</a>.</li>
+										<li>6+ years of experience with the <a href="https://unity.com/">Unity Creation Engine</a>.</li>
 										<li>Participated in multiple game jams including <a href="https://ldjam.com/">Ludum Dare</a> (More info Below).</li>
+									</ul>
 								</section>
+
 								<section>
 									<span class="icon solid major fa-graduation-cap"></span>
 									<h3>Education</h3>
@@ -75,7 +80,9 @@
 										<li><a href="https://prod.orangecoastcollege.edu/">Orange Coast Collage</a> 2019 - 2022
 										(Associate Degree)</li>
 										<li><a href="https://www.msjc.edu/">Mt. San Jacento Collage</a> 2017 - 2018</li></ul>
+									</ul>
 								</section>
+
 								<section>
 									<span class="icon solid major fa-paint-brush"></span>
 									<h3>Animation & Art</h3>
@@ -83,7 +90,9 @@
 										<li>Experience in <a href="https://www.blender.org/">Blender</a> an app used to create 3D game assets.</li>
 										<li>Experience in <a href="https://www.aseprite.org/">Aseprite</a>, an app used to make 2D pixel art.</li>
 										<li>Experience in <a href="https://www.adobe.com/">Adobe</a> apps like Photoshop, Illistrator, and Lightroom.</li>
+									</ul>
 								</section>
+
 							</div>
 						</div>
 					</section>
@@ -94,6 +103,7 @@
 						<div class="inner">
 						<h2>PROJECTS</h2>
 						</div>
+						<!-- Rogue Nebula -->
 						<section>
 							<a href="#" class="image"><img src="images/nebula_title.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
@@ -113,6 +123,7 @@
 									</div>
 							</div>
 						</section>
+						<!-- Future Scape -->
 						<section>
 							<a href="#" class="image"><img src="images/future_scape_title.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
@@ -133,6 +144,7 @@
 									</div>
 							</div>
 						</section>
+						<!-- Unstable Star -->
 						<section>
 							<a href="#" class="image"><img src="images/unstable_star_title.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
@@ -152,6 +164,7 @@
 									</div>
 							</div>
 						</section>
+						<!-- The Devil's Diner -->
 						<section>
 							<a href="#" class="image"><img src="images/devil_title.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
@@ -170,6 +183,7 @@
 								</div>
 							</div>
 						</section>
+						<!-- Boodlust -->
 						<section>
 							<a href="#" class="image"><img src="images/blood_title.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
@@ -187,6 +201,7 @@
 									</div>
 							</div>
 						</section>
+						<!-- Star Raid -->
 						<section>
 							<a href="#" class="image"><img src="images/star_title.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
@@ -205,6 +220,7 @@
 									</div>
 							</div>
 						</section>
+						<!-- Fishy Business -->
 						<section>
 							<a href="#" class="image"><img src="images/fishy_title.png" alt="" data-position="top center" /></a>
 							<div class="content">
@@ -222,6 +238,7 @@
 								</div>
 							</div>
 						</section>
+						<!-- Spirit Of Calamity -->
 						<section>
 							<a href="#" class="image"><img src="images/spirit_title.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
@@ -237,6 +254,7 @@
 								</div>
 							</div>
 						</section>
+						<!-- Other Games -->
 						<section>
 							<a href="#" class="image"><img src="images/dwarf_title.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
