--- a/rogue_nebula.html
+++ b/rogue_nebula.html
@@ -39,21 +39,25 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
+							<!-- Project Title -->
 							<h1 class="major">Rogue Nebula</h1>
-							<!-- <span class="image fit"><img src="images/pic16.jpg" alt="" /></span> -->
+							<!-- Project Summary -->
 							<span class="image fit"><img src="images/bl_start.gif" alt="" /></span>
 							<h2>Summary</h2>
-							<p>A project made for the Video Game Design Club during their summer session. Endlessly plow through waves of enemies in the persuite of a high score. A game that is
-								heavily inspired by classic arcade games like Galaga, Defender 1981, and Space Invaders. This game features a scrolling 3D envirnment, a reactive user interface,
-								vibrant special effects, and an assortment of enemy behaviors.
+							<p> Developed during the summer session of the Video Game Development Club, <em>Rogue Nebula</em> challenges players to survive endless waves of enemies while aiming for a high score.
+								Heavily inspired by classic arcade titles like <em>Galaga</em>, <em>Defender (1981)</em>, and <em>Space Invaders</em>, the game features a scrolling 3D environment, reactive UI, vibrant special 
+								effects, and diverse enemy behaviors.
 							</p>
+							<!-- Gameplay Description -->
 							<span class="image fit"><img src="images/bl_gameplay.gif" alt="" /></span>
 							<h2>Gameplay</h2>
-							<p>The player first must choose a name to go by in order to get a leaderboard entry, if they do not choose a name they are "anonymous". The player is then immediatly
-								thrusted into the first wave of enemies, in order to survive the player must dodge their flurry of bullets and fire back. The player is not completely helpless through
-								as they have abilities and a secondary weapon to help them. Every eight waves the game starts upping the difficulty, after wave sixteen you are on the hardest difficulty
-								and from there on you must try to survive an endless horde. This game is not easy but a verteran bullet hell player might get high into the score system.
+							<p> The player begins by entering their name for a leaderboard entry; if a name is not selected, they are labeled "anonymous." When start is pressed the player is thrust into
+								battle immediately as endless waves of enemies barrage the screen. To survive, players must dodge incoming projectiles and retaliate with the weapons in their arsonal. To aid survival, players 
+								can use special abilities and select a wide arrange of weapons. Every eight waves, the difficulty increases, with the hardest level starting after wave sixteen. Enemies will 
+								continue to scale with the difficulety keeping the game a challenging and rewarding bullet-hell experience. High scores will be displayed for other players who
+								open the game.
 							</p>
+							<!-- Feature List -->
 							<h2>Implemented Features</h2>
 							<div class="table-wrapper">
 								<table>
@@ -66,34 +70,45 @@
 									<tbody>
 										<tr>
 											<td>High Score System</td>
-											<td>The high score is persistant throughout the playthough utalizing Unity's Scriptable Object System. 
+											<td>
+												The high score persists across playthroughs using Unity's Scriptable Object System and a JSON save format. 
 											</td>
 											<td></td>
 										</tr>
 										<tr>
-											<td>Plyer Abilities</td>
-											<td>The player is given a small set of unique abilites. An Evade that gives the player invunerability frames and extra speed and a Bubble Shield that also
-												make the player invunerable for a more extended period of time. Each ability has a cooldown timer that communicates with the player's HUD to let the player
-												know when they can use it again.
+											<td>Player Abilities</td>
+											<td>
+												The player is given a small set of unique abilities. Players can use an "Evade" ability, providing brief 
+												invulnerability and extra speed, and a "Bubble Shield," granting extended invulnerability. Each ability 
+												has a cooldown timer displayed on the HUD that communicates when abilities will be available again.
 											</td>
 										</tr>
 										<tr>
-											<td>Assortment of Unique Enemies</td>
-											<td>The game features four unique enemy types. A standard enemy that flys back and fourth across the screen and shoots bullets at a semi random rate,
-												a radial enemy that shoots bullets in eight different directions, a bomber enemy that periodically drops timed bombs, and a homing enemy that tracks
-												the player's position and shoots bullets at the players direction.
+											<td>Enemy Variety</td>
+											<td>
+												The game includes four enemy types: a basic enemy type that flys back and forth shooting periodically, radial enemies 
+												that fire bullets in all directions, bomber enemies that drop fused bombs, and homing enemies that track and shoot at the player’s position.
+											</td>
+										</tr>
+										<tr>
+											<td>Enemy Varients</td>
+											<td>
+												The game features four unique enemy types as well as 3 types of varients for them. Each varient of a type of enemy has an increased attack speed,
+												movement speed, health, and fire rate. 
 											</td>
 										</tr>
 										<tr>
 											<td>Dynamic Wave System</td>
-											<td> The game reacts to the player's wave count. Every ten waves the game will intraduce new enemies and make harder varients of basic enemies to up the challenge.
+											<td> 
+												The game reacts to the player's wave count. Every ten waves, new enemies are introduced, and more challenging variants of basic enemies appear, 
+												increasing difficulty.
 											</td>
 										</tr>
 										<tr>
 											<td>Particle System and Shaders</td>
-											<td> The game features unique hit and destroy particles heavily inspired by arcade games. The explosion particles not only use high quality explosions from Unity's particle pack but
-												also voxels to elicite a 3D arcade-like effect. The hit effects reflect the type of entity damaged and change color using a combination of lightning particles and 2D sprites.
-												The player is given a special shader fresnel effect when hit.
+											<td> 
+												The game incorporates arcade-inspired hit and explosion particles, with voxel-based 3D effects and dynamic hit effects that change color based on 
+												the damaged entity. 
 											</td>
 										</tr>
 										<tr>
@@ -103,6 +118,7 @@
 									</tbody>
 								</table>
 							<br>
+							<!-- Links -->
 							<ul class="icons">
 								<li>Link to Game - <a href="https://heatwave-studios.itch.io/rogue-nebula">https://heatwave-studios.itch.io/rogue-nebula</span></a></li>
 								<li>Repository Link - <a href="https://github.com/GDCASU/SummerSession2023" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
@@ -116,7 +132,7 @@
 			<footer id="footer" class="wrapper alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>Website Template By: <a href="http://html5up.net">HTML5 UP</a></li>
+						<!-- <li>Website Template By: <a href="http://html5up.net">HTML5 UP</a></li> -->
 					</ul>
 				</div>
 			</footer>
